--- a/src/component/BrowseArticles/BrowseArticles.scss
+++ b/src/component/BrowseArticles/BrowseArticles.scss
@@ -2,6 +2,24 @@
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
-	width: 100%;
-	padding: 10px;
+  padding: 10px 50px ;
+  
+  .go-to {
+    width: 300px;
+
+    .article {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+
+      div {
+
+        img {
+          width: 100%;
+        }
+
+      }
+    }
+  }
 }
