--- a/src/component/Article/Article.scss
+++ b/src/component/Article/Article.scss
@@ -5,6 +5,7 @@
   align-items: center;
 
   .back {
+    height: 50px;
     width: 100%;
   }
 
@@ -16,8 +17,9 @@
       display: flex;
       width: 65%;
       align-items: center;
+      justify-content: center;
       img {
-        width: 80%;
+        width: 70%;
       }
 
       text {
@@ -29,7 +31,6 @@
       flex-direction: column;
       width: 40%;
       padding: 20px;
-      background-color: red;
 
       h2 {
         margin: 0;
