--- a/src/component/MenuBloc/MenuBloc.scss
+++ b/src/component/MenuBloc/MenuBloc.scss
@@ -2,9 +2,16 @@
 	position: fixed;
 	left: 0;
 	top: 0;
-	display: flex;
-	height: 100%;
-	flex-direction: column;
 	width: 150px;
-	padding: 40px 20px;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+
+	.menu {
+		display: flex;
+		height: 100%;
+		flex-direction: column;
+		width: 80%;
+		padding-top: 40px;
+	}
 }
