--- a/src/component/BrowseArticles/BrowseArticles.scss
+++ b/src/component/BrowseArticles/BrowseArticles.scss
@@ -3,7 +3,7 @@
 	justify-content: space-between;
 	flex-wrap: wrap;
   padding: 10px 50px ;
-  
+
   .go-to {
     width: 300px;
 
@@ -16,6 +16,7 @@
       div {
 
         img {
+          height: 350px;
           width: 100%;
         }
 
